初始化页面框架

--- a/webapp/view/findTeacher.html
+++ b/webapp/view/findTeacher.html
@@ -70,20 +70,8 @@
 					<h2 class="section-heading">
 						服务
 						<p class="lead">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. <a
-								href="#">Donec et</a> commodo neque. Fusce venenatis, neque
-							vitae ornare consequat, sapien orci vestibulum augue, eu posuere
-							dui urna non dolor. Quisque justo ipsum, <a href="#">consectetur
-								nec mi</a> hendrerit, semper ultrices lectus. Curabitur id dolor eu
-							neque pellentesque faucibus quis vel tellus. <a href="#">Etiam
-								in</a> ullamcorper ligula. <a href="#">Praesent mattis</a> dui in
-							auctor scelerisque. Nulla facilisi. Morbi urna orci, aliquam ut
-							nisi ut, imperdiet volutpat felis. Praesent a porttitor sapien,
-							vel faucibus nisi.
+							找老师
 						</p>
-				</div>
-				<div class="col-lg-5 col-sm-pull-6  col-sm-6">
-					<img class="img-responsive" src="img/doge.png" alt="">
 				</div>
 			</div>
 
