--- a/webapp/view/findStudent.html
+++ b/webapp/view/findStudent.html
@@ -36,18 +36,9 @@
 				<div class="col-lg-5 col-sm-6">
 					<div class="clearfix"></div>
 					<h2 class="section-heading">
-						关于我们
+						找学生
 						<p class="lead">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et
-							commodo neque. <a href="#">Fusce venenatis</a>, neque Vitae
-							ornare consequat, sapien orci vestibulum augue, eu posuere dui
-							urna non dolor. Quisque justo ipsum, consectetur nec mi
-							hendrerit, semper ultrices lectus. <a href="#">Curabitur</a> id
-							dolor eu neque pellentesque faucibus quis vel tellus. <a href="#">Etiam
-								in ullamcorper</a> ligula. Praesent mattis dui in auctor
-							scelerisque. Nulla facilisi. Morbi urna orci, aliquam ut nisi ut,
-							imperdiet volutpat felis. Praesent a porttitor sapien, vel
-							faucibus nisi.
+							zhaoxuesheng
 						</p>
 				</div>
 				<div class="col-lg-5 col-lg-offset-2 col-sm-6">
