--- a/webapp/view/footer.html
+++ b/webapp/view/footer.html
@@ -4,13 +4,13 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<ul class="list-inline">
-					<li><a href="#home">首页</a></li>
+					<li><a href="mainUrl.do" class="scroll-link">首页</a></li>
 					<li class="footer-menu-divider">&sdot;</li>
-					<li><a href="#about">关于</a></li>
+					<li><a href="findTeacherUrl.do" class="scroll-link">找老师</a></li>
 					<li class="footer-menu-divider">&sdot;</li>
-					<li><a href="#services">服务</a></li>
+					<li><a href="findStudentUrl.do" class="scroll-link">找学员</a></li>
 					<li class="footer-menu-divider">&sdot;</li>
-					<li><a href="#contact">联系我们</a></li>
+					<li><a href="aboutUrl.do" class="scroll-link">关于我们</a></li>
 				</ul>
 				<p class="copyright text-muted small">Copyright &copy; HangYang
 					2016. All Rights Reserved.</p>
