--- a/webapp/view/navigation.html
+++ b/webapp/view/navigation.html
@@ -13,14 +13,14 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#" class="scroll-link" data-id="home">首页</a></li>
-      <li><a href="#" class="scroll-link" data-id="about">找老师</a></li>
-      <li><a href="#" class="scroll-link" data-id="services">找学员</a></li>
-      <li><a href="#" class="scroll-link" data-id="contact">关于我们</a></li>
-      <li><a style="cursor:pointer;" id="loginpopup">登录/注册</a></li>
+      <li><a href="mainUrl.do" class="scroll-link">首页</a></li>
+      <li><a href="findTeacherUrl.do" class="scroll-link">找老师</a></li>
+      <li><a href="findStudentUrl.do" class="scroll-link">找学员</a></li>
+      <li><a href="aboutUrl.do" class="scroll-link">关于我们</a></li>
+      <li><a href="loginUrl.do" class="scroll-link">登录/注册</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-		{{user.username}} 
+		<b id="user">游客</b> 
 		<b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a href="#">我的账户</a></li>
