--- a/webapp/view/footer.html
+++ b/webapp/view/footer.html
@@ -2,7 +2,7 @@
 <footer>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-12">
+			<div class="col-lg-12 text-center">
 				<ul class="list-inline">
 					<li><a href="mainUrl.do" class="scroll-link">首页</a></li>
 					<li class="footer-menu-divider">&sdot;</li>
