--- a/webapp/view/login.html
+++ b/webapp/view/login.html
@@ -26,22 +26,45 @@
 </head>
 
 <body>
-<div id="navigation"></div>
+	<div id="navigation"></div>
 
 	<div class="content-section-a" id="about">
 
 		<div class="container">
 
 			<div class="row">
-				<div class="col-lg-5 col-sm-6">
-					<div class="clearfix"></div>
-					<h2 class="section-heading">
-						登录
-						<p class="lead">
-							登录
-						</p>
+				<div class="col-md-6 col-md-offset-3">
+
+					<div class="modal-header">
+						<h4 class="modal-title" id="myModalLabel1">用户登录</h4>
+					</div>
+
+					<div class="modal-body" id="login_details">
+						<span> 已有账户</span> </br> </br>
+						<form role="form" id="loginForm" name="loginForm" action="login.do"
+							method="post" novalidate>
+							<span style="font-weight: bold;">用户名</span>
+							<div class="form-group">
+							<input type="text" class="form-control" placeholder="username" name="username"/>
+							</div>
+							<div class="form-group">
+							<span style="font-weight: bold;">密码</span>
+							</div>
+							<div class="form-group">
+							<input type="password" class="form-control" placeholder="password" name="password"/>
+							</div>
+						</form>
+					</div>
+
+					<div class="modal-footer">
+							<input style="float: right" type="button" class="btn btn-success"
+							value="登录"/> 
+							<span style="float:left"><a href="#">忘记密码?</a></span> </br> 
+							<span style="float:left"> 还不是会员?<a href="registerUrl.do">注册!</a></span> 
+					</div>
+
 				</div>
-				
+
 			</div>
 
 		</div>
@@ -50,7 +73,7 @@
 	</div>
 	<!-- /.content-section-a -->
 
-	
+
 
 
 	<div id="footer"></div>
