--- a/webapp/view/navigation.html
+++ b/webapp/view/navigation.html
@@ -17,7 +17,7 @@
       <li><a href="findTeacherUrl.do" class="scroll-link">找老师</a></li>
       <li><a href="findStudentUrl.do" class="scroll-link">找学员</a></li>
       <li><a href="aboutUrl.do" class="scroll-link">关于我们</a></li>
-      <li><a href="loginUrl.do" class="scroll-link">登录/注册</a></li>
+      <li><a href="loginUrl.do" class="scroll-link">登录</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
 		<b id="user">游客</b> 
