--- a/webapp/view/register.html
+++ b/webapp/view/register.html
@@ -33,13 +33,46 @@
 		<div class="container">
 
 			<div class="row">
-				<div class="col-lg-5 col-sm-6">
-					<div class="clearfix"></div>
-					<h2 class="section-heading">
-						注册
-						<p class="lead">
-							注册
-						</p>
+				<div class="col-md-6 col-md-offset-3">
+
+					<div class="modal-header">
+						<h4 class="modal-title" id="myModalLabel1">用户注册</h4>
+					</div>
+
+					<div class="modal-body" id="login_details">
+						<span> 注册账户</span> </br> </br>
+						<form role="form" id="loginForm" name="loginForm" action="login.do"
+							method="post" novalidate>
+							*<span style="font-weight: bold;">用户名</span>
+							<div class="form-group">
+							<input type="text" class="form-control" placeholder="username" name="username"/>
+							</div>
+							<div class="form-group">
+							*<span style="font-weight: bold;">密码</span>
+							</div>
+							<div class="form-group">
+							<input type="password" class="form-control" placeholder="password" name="password"/>
+							</div>
+							<div class="form-group">
+							*<span style="font-weight: bold;">重复密码</span>
+							</div>
+							<div class="form-group">
+							<input type="password" class="form-control" placeholder="repeat password" name="password2"/>
+							</div>
+							<div class="form-group">
+							*<span style="font-weight: bold;">真实姓名</span>
+							</div>
+							<div class="form-group">
+							<input type="password" class="form-control" placeholder="realname" name="realname"/>
+							</div>
+						</form>
+					</div>
+
+					<div class="modal-footer">
+							<input style="float: right" type="button" class="btn btn-success"
+							value="注册"/> 
+					</div>
+
 				</div>
 				
 			</div>
