--- a/webapp/view/login.html
+++ b/webapp/view/login.html
@@ -41,7 +41,7 @@
 
 					<div class="modal-body" id="login_details">
 						<span> 已有账户</span> </br> </br>
-						<form role="form" id="loginForm" name="loginForm" action="login.do"
+						<form role="form" id="loginForm" name="loginForm"
 							method="post" novalidate>
 							<span style="font-weight: bold;">用户名</span>
 							<div class="form-group">
@@ -57,11 +57,12 @@
 					</div>
 
 					<div class="modal-footer">
-							<input style="float: right" type="button" class="btn btn-success"
+							<input id="submitButton" style="float: right" type="button" class="btn btn-success"
 							value="登录"/> 
 							<span style="float:left"><a href="#">忘记密码?</a></span> </br> 
-							<span style="float:left"> 还不是会员?<a href="registerUrl.do">注册!</a></span> 
+							<span style="float:left"> 还不是会员?<a href="registerUrl.do">注册!</a></span>
 					</div>
+					<div id="loginInfo"></div>
 
 				</div>
 
@@ -78,7 +79,7 @@
 
 	<div id="footer"></div>
 
-	<script src="controller/main.js"></script>
+	<script src="controller/login.js"></script>
 </body>
 
 </html>
