完善前端页面

--- a/webapp/view/about.html
+++ b/webapp/view/about.html
@@ -85,7 +85,7 @@
 
 	<div id="footer"></div>
 
-	<script src="controller/main.js"></script>
+	<script src="controller/about.js"></script>
 </body>
 
 </html>
