--- a/webapp/view/findStudent.html
+++ b/webapp/view/findStudent.html
@@ -87,7 +87,7 @@
 
 	<div id="footer"></div>
 
-	<script src="controller/main.js"></script>
+	<script src="controller/findStudent.js"></script>
 </body>
 
 </html>
