--- a/webapp/view/findTeacher.html
+++ b/webapp/view/findTeacher.html
@@ -84,7 +84,7 @@
 
 	<div id="footer"></div>
 
-	<script src="controller/main.js"></script>
+	<script src="controller/findTeacher.js"></script>
 </body>
 
 </html>
