--- a/webapp/view/navigation.html
+++ b/webapp/view/navigation.html
@@ -20,7 +20,7 @@
       <li><a href="loginUrl.do" class="scroll-link">登录</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-		<b id="user">游客</b> 
+		<b id="user"></b> 
 		<b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a href="#">我的账户</a></li>
@@ -32,3 +32,4 @@
     </ul>
   </div>
   </nav>
+  <script src="controller/navigation.js"></script>
