--- a/webapp/view/register.html
+++ b/webapp/view/register.html
@@ -41,7 +41,7 @@
 
 					<div class="modal-body" id="login_details">
 						<span> 注册账户</span> </br> </br>
-						<form role="form" id="loginForm" name="loginForm" action="login.do"
+						<form role="form" id="registerForm" name="loginForm"
 							method="post" novalidate>
 							*<span style="font-weight: bold;">用户名</span>
 							<div class="form-group">
@@ -69,7 +69,7 @@
 					</div>
 
 					<div class="modal-footer">
-							<input style="float: right" type="button" class="btn btn-success"
+							<input id="registerButton" style="float: right" type="button" class="btn btn-success"
 							value="注册"/> 
 					</div>
 
@@ -88,7 +88,7 @@
 
 	<div id="footer"></div>
 
-	<script src="controller/main.js"></script>
+	<script src="controller/register.js"></script>
 </body>
 
 </html>
