--- a/webapp/view/login.html
+++ b/webapp/view/login.html
@@ -10,6 +10,7 @@
 
 <!-- Bootstrap core CSS -->
 <link href="css/bootstrap.css" rel="stylesheet">
+<link href="css/bootstrapValidator.css" rel="stylesheet">
 
 <!-- Custom Google Web Font -->
 <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -21,6 +22,7 @@
 <!-- JavaScript -->
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/bootstrapValidator.js"></script>
 <script src="js/custom.js"></script>
 
 </head>
@@ -34,36 +36,36 @@
 
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3">
+					<form role="form" id="loginForm" name="loginForm" method="post"
+						novalidate>
+						<div class="modal-header">
+							<h4 class="modal-title" id="myModalLabel1">用户登录</h4>
+						</div>
 
-					<div class="modal-header">
-						<h4 class="modal-title" id="myModalLabel1">用户登录</h4>
-					</div>
-
-					<div class="modal-body" id="login_details">
-						<span> 已有账户</span> </br> </br>
-						<form role="form" id="loginForm" name="loginForm"
-							method="post" novalidate>
-							<span style="font-weight: bold;">用户名</span>
+						<div class="modal-body" id="login_details">
+							<span> 已有账户</span> </br> </br> <span style="font-weight: bold;">用户名</span>
 							<div class="form-group">
-							<input type="text" class="form-control" placeholder="username" name="username"/>
+								<input type="text" class="form-control" placeholder="username"
+									name="username" />
 							</div>
 							<div class="form-group">
-							<span style="font-weight: bold;">密码</span>
+								<span style="font-weight: bold;">密码</span>
 							</div>
 							<div class="form-group">
-							<input type="password" class="form-control" placeholder="password" name="password"/>
+								<input type="password" class="form-control"
+									placeholder="password" name="password" />
 							</div>
-						</form>
-					</div>
 
-					<div class="modal-footer">
-							<input id="submitButton" style="float: right" type="button" class="btn btn-success"
-							value="登录"/> 
-							<span style="float:left"><a href="#">忘记密码?</a></span> </br> 
-							<span style="float:left"> 还不是会员?<a href="registerUrl.do">注册!</a></span>
-					</div>
-					<div id="loginInfo"></div>
+						</div>
 
+						<div class="modal-footer">
+							<input id="submitButton1" style="float: right" type="submit"
+								class="btn btn-success" value="登录" /> <span style="float: left"><a
+								href="#">忘记密码?</a></span> </br> <span style="float: left"> 还不是会员?<a
+								href="registerUrl.do">注册!</a></span>
+						</div>
+						<div id="loginInfo"></div>
+					</form>
 				</div>
 
 			</div>
@@ -73,7 +75,6 @@
 
 	</div>
 	<!-- /.content-section-a -->
-
 
 
 
