--- a/webapp/view/main.html
+++ b/webapp/view/main.html
@@ -27,6 +27,46 @@
 
 <body>
 <div id="navigation"></div>
+	<div class="intro-header" id="home">
+		<div id="carousel-example-generic" class="carousel slide"
+			data-ride="carousel">
+			<!-- Indicators -->
+			<ol class="carousel-indicators">
+				<li data-target="#carousel-example-generic" data-slide-to="0"
+					class="active"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+			</ol>
+
+			<!-- Wrapper for slides -->
+			<div class="carousel-inner">
+				<div class="item active">
+					<img src="img/img1.jpg" alt="First Image">
+					<div class="carousel-caption">第一页</div>
+				</div>
+				<div class="item">
+					<img src="img/img2.jpg" alt="Second Image">
+					<div class="carousel-caption">第二页</div>
+				</div>
+				<div class="item">
+					<img src="img/img3.jpg" alt="Third Image">
+					<div class="carousel-caption">第三页</div>
+				</div>
+			</div>
+
+			<!-- Controls -->
+			<a class="left carousel-control" href="#carousel-example-generic"
+				data-slide="prev"> <span
+				class="glyphicon glyphicon-chevron-left"></span>
+			</a> <a class="right carousel-control" href="#carousel-example-generic"
+				data-slide="next"> <span
+				class="glyphicon glyphicon-chevron-right"></span>
+			</a>
+		</div>
+
+		<!-- /.container -->
+
+	</div>
 
 	<div class="content-section-a" id="about">
 
@@ -49,6 +89,7 @@
 							imperdiet volutpat felis. Praesent a porttitor sapien, vel
 							faucibus nisi.
 						</p>
+						</h2>
 				</div>
 				<div class="col-lg-5 col-lg-offset-2 col-sm-6">
 					<img class="img-responsive" src="img/ipad.png" alt="">
