--- a/webapp/view/register.html
+++ b/webapp/view/register.html
@@ -10,6 +10,7 @@
 
 <!-- Bootstrap core CSS -->
 <link href="css/bootstrap.css" rel="stylesheet">
+<link href="css/bootstrapValidator.css" rel="stylesheet">
 
 <!-- Custom Google Web Font -->
 <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -21,6 +22,7 @@
 <!-- JavaScript -->
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/bootstrapValidator.js"></script>
 <script src="js/custom.js"></script>
 
 </head>
@@ -34,15 +36,15 @@
 
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3">
-
+					<form role="form" id="registerForm" name="loginForm"
+							method="post" novalidate>
 					<div class="modal-header">
 						<h4 class="modal-title" id="myModalLabel1">用户注册</h4>
 					</div>
 
 					<div class="modal-body" id="login_details">
 						<span> 注册账户</span> </br> </br>
-						<form role="form" id="registerForm" name="loginForm"
-							method="post" novalidate>
+						
 							*<span style="font-weight: bold;">用户名</span>
 							<div class="form-group">
 							<input type="text" class="form-control" placeholder="username" name="username"/>
@@ -63,16 +65,16 @@
 							*<span style="font-weight: bold;">真实姓名</span>
 							</div>
 							<div class="form-group">
-							<input type="password" class="form-control" placeholder="realname" name="realname"/>
+							<input type="text" class="form-control" placeholder="realname" name="realname"/>
 							</div>
-						</form>
+						
 					</div>
 
 					<div class="modal-footer">
-							<input id="registerButton" style="float: right" type="button" class="btn btn-success"
+							<input id="registerButton" style="float: right" type="submit" class="btn btn-success"
 							value="注册"/> 
 					</div>
-
+					</form>
 				</div>
 				
 			</div>
@@ -82,8 +84,6 @@
 
 	</div>
 	<!-- /.content-section-a -->
-
-	
 
 
 	<div id="footer"></div>
