完善登录注册表单验证

--- a/webapp/view/navigation.html
+++ b/webapp/view/navigation.html
@@ -26,7 +26,7 @@
           <li><a href="#">我的账户</a></li>
           <li><a href="#">我的服务</a></li>
           <li class="divider"></li>
-          <li><a href="logout.do">退出登录</a></li>
+          <li><a id="logout" href="#">退出登录</a></li>
         </ul>
       </li>
     </ul>
