--- a/webapp/view/register.html
+++ b/webapp/view/register.html
@@ -74,6 +74,7 @@
 							<input id="registerButton" style="float: right" type="submit" class="btn btn-success"
 							value="注册"/> 
 					</div>
+					<div id="registerInfo"></div>
 					</form>
 				</div>
 				
